[package]
name = "candle-lstm"
version = "0.2.3"
edition = "2021"
description = "optimize HuggingFace candle LSTM in some cases"
readme = "README.md"
repository = "https://github.com/kigichang/candle-lstm"
license-file = "LICENSE"
keywords = ["candle", "lstm", "pytorch"]

[dependencies]
candle-core = "0.7.0"
candle-nn = "0.7.0"

[dev-dependencies]
anyhow = "1.0.86"

[target.'cfg(target_os = "macos")'.dev-dependencies]
candle-core = {version = "0.7.0", features = ["accelerate", "metal"]}
candle-nn = {version = "0.7.0", features = ["accelerate", "metal"]}

[target.'cfg(not(target_os = "macos"))'.dev-dependencies]
candle-core = {version = "0.7.0", features = ["mkl", "cuda"]}
candle-nn = {version = "0.7.0", features = ["mkl", "cuda"]}

